objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountOwnerStatus__c</fullName>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Choose the account type</description>
        <label>Payne Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transactional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authentication Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coated Film Telesales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Authentication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export Coated Film</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK Coated Film</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aged1__c</fullName>
        <label>Aged 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aged2__c</fullName>
        <label>Aged 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aged3__c</fullName>
        <label>Aged 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_by_Customer__c</fullName>
        <description>Date on which the last key account plan was approved by the customer</description>
        <label>Approved by Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_by_Director__c</fullName>
        <description>Enter the date on which the last key account plan was approved by a director</description>
        <label>Approved by Director</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_by_GMC__c</fullName>
        <description>(Optional) date on which the Key Account plan was approved by the Group Management Comittee</description>
        <label>Approved by GMC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AutoMDM__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>AutoMDM</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Automotive_ConAgg__c</fullName>
        <label>Automotive / ConAgg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BalDue__c</fullName>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Area_OLD__c</fullName>
        <label>Business Area OLD</label>
        <picklist>
            <picklistValues>
                <fullName>Enitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filtrona Filters and Scientific Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filtrona Porous Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payne AIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payne Packaging Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipe Protection Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speciality Tapes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Business Area</label>
        <referenceTo>Business_Area__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Segment</label>
        <referenceTo>Business_Segment__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Customer Support Representative associated with this account</inlineHelpText>
        <label>CSR</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Divisional Service</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Equivalent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Equivalent</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Account you are adding must have a Type = Competitor.</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Accounts</relationshipLabel>
        <relationshipName>Customer_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreditLimit__c</fullName>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentBalance__c</fullName>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Class__c</fullName>
        <label>Customer Class</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Family__c</fullName>
        <label>Customer Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Grade__c</fullName>
        <label>Customer Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer_Group__c.Business_Area__c</field>
                <operation>equals</operation>
                <valueField>$Source.Business_Area__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Group__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer_Type__c.Business_Area__c</field>
                <operation>equals</operation>
                <valueField>$Source.Business_Area__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Type__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Became_Customer__c</fullName>
        <label>Date Became Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ERP_Customer_ID_of_Parent__c</fullName>
        <description>Fourth Shift Customer ID for the Parent of this account - used to establish the account hierarchy</description>
        <externalId>true</externalId>
        <inlineHelpText>Fourth Shift Customer ID for the Parent of this account - used to establish the account hierarchy</inlineHelpText>
        <label>ERP Customer ID of Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Electronic__c</fullName>
        <label>Electrical &amp; Electronic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FS_CUST_ID__c</fullName>
        <label>ERP Customer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Ship_To_ID__c</fullName>
        <label>FS Ship To ID</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Site_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ERP Site Id</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Site__c.Business_Area__c</field>
                <operation>equals</operation>
                <valueField>$Source.Business_Area__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fax_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <label>Gross Margin %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HoldAmount__c</fullName>
        <label>Hold Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HubSpot_Inc__Sync_From_HubSpot__c</fullName>
        <description>This is for HubSpot use only</description>
        <label>Sync From HubSpot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account to which key account management processes apply</description>
        <inlineHelpText>Tick if this is a key account</inlineHelpText>
        <label>Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Know_your_customer_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Know your customer verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_MDM_Update__c</fullName>
        <label>Last MDM Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_progress_meeting__c</fullName>
        <description>Date on which the last key account progress meeting took place</description>
        <label>Last progress meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_of_Business_SIC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line of Business (SIC)</label>
        <referenceTo>SIC__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bill To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MDM_External_ID__c</fullName>
        <description>Fourth Shift Customer ID for this account</description>
        <externalId>true</externalId>
        <inlineHelpText>Fourth Shift Customer ID for this account</inlineHelpText>
        <label>MDM External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Machine_Builders_OEMs__c</fullName>
        <label>Machine Builders / OEMs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Active__c</fullName>
        <formula>IF(Total_Revenue_Last_12_Months__c  &gt; 0, TRUE, FALSE)</formula>
        <inlineHelpText>Checkbox is ticked when the Total Revenue on an Account is greater than zero</inlineHelpText>
        <label>Marketing Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Status__c</fullName>
        <formula>IF(ISPICKVAL(Type, &quot;Customer&quot;), 

 IF( AND(
          Total_Revenue_Last_Month__c&gt;0,
          ((Total_Revenue_Last_12_Months__c-Total_Revenue_Last_Month__c)+Total_Revenue_Last_Month_Prev_Year__c)=0,
          ( Total_Revenue_Last_12_Months_Prev_Year__c-Total_Revenue_Last_Month_Prev_Year__c)&gt;0) , &apos;Re-activated&apos;


, IF(Total_Revenue_Last_12_Months__c&lt;&gt;0, &apos;Active&apos;, 


IF(Total_Revenue_Last_12_Months_Prev_Year__c&gt;0, &apos;Churn&apos;, &apos;Lapsed&apos;))) 




, &apos;Never Customer&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketing Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Top_Key__c</fullName>
        <label>Master Top Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Product_Flexibility__c</fullName>
        <label>Non-Standard Product Flexibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Field_Sales__c</fullName>
        <label>Number of Field Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <label>Number of Locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Last12_Months__c</fullName>
        <description>Total number of invoiced orders in last 12 months (rolling 12 months).</description>
        <inlineHelpText>Total number of invoiced orders in last 12 months (rolling 12 months)</inlineHelpText>
        <label>Orders Last 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Last3_Months__c</fullName>
        <description>Total number of orders invoiced in last 3 months (rolling 3 months).</description>
        <inlineHelpText>Total number of orders invoiced in last 3 months (rolling 3 months)</inlineHelpText>
        <label>Orders Last 3 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Last6_Months__c</fullName>
        <description>Total number of orders invoiced in last 6 months (rolling 6 months).</description>
        <inlineHelpText>Total number of orders invoiced in last 6 months (rolling 6 months)</inlineHelpText>
        <label>Orders Last 6 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orders_Last_Month__c</fullName>
        <description>Total number of orders invoiced last month (rolling month).</description>
        <inlineHelpText>Total number of orders invoiced last month (rolling month)</inlineHelpText>
        <label>Orders Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Please_Specify__c</fullName>
        <label>Other - Please Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview_of_Competitor_Key_Product_Range__c</fullName>
        <label>Overview of Competitor Key Product Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overview_of_Countries_Operated_in__c</fullName>
        <label>Overview of Countries Operated in</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POP_POS__c</fullName>
        <label>POP / POS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayTerms__c</fullName>
        <label>Pay terms</label>
        <picklist>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Created__c</fullName>
        <description>Enter the date on which the last key account plan was created</description>
        <label>Plan Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <label>Potential Value</label>
        <picklist>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quotes_Last12_Months__c</fullName>
        <description>Total number of quotes sent in last 12 months (rolling 12 months).</description>
        <inlineHelpText>Total number of quotes sent in last 12 months (rolling 12 months)</inlineHelpText>
        <label>Quotes Last 12 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotes_Last3_Months__c</fullName>
        <description>Total number of quotes sent in last 3 months (rolling 3 months).</description>
        <inlineHelpText>Total number of quotes sent in last 3 months (rolling 3 months)</inlineHelpText>
        <label>Quotes Last 3 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotes_Last6_Months__c</fullName>
        <description>Total number of quotes sent in last 6 months (rolling 6 months).</description>
        <inlineHelpText>Total number of quotes sent in last 6 months (rolling 6 months)</inlineHelpText>
        <label>Quotes Last 6 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotes_Last_Month__c</fullName>
        <description>Total number of quotes sent last month (rolling month).</description>
        <inlineHelpText>Total number of quotes sent last month (rolling month)</inlineHelpText>
        <label>Quotes Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Report_Country__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Report Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Growth__c</fullName>
        <label>Revenue Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <description>SBU</description>
        <formula>Business_Area__r.SBU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Description__c</fullName>
        <formula>Line_of_Business_SIC__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Proposition_Next_Day_etc__c</fullName>
        <label>Service Proposition (Next Day etc)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Unit__c</fullName>
        <label>Service Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Parts_Catalogue_Y_N__c</fullName>
        <label>Standard Parts Catalogue (Y/N)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <label>Sub Category</label>
        <picklist>
            <controllingField>Industry</controllingField>
            <picklistValues>
                <fullName>Agricultural Machines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aircraft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambient Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto &amp; Specialist Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bagged &amp; Boxed Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bicycles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binding, Stretching &amp; Finishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buses &amp; Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caravans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cattle Breeding Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centralised Accreditation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chilled Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Rooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conservatories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Appliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electricity Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finished Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floors &amp; Stairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glazing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphics &amp; Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenhouses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Beauty Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating, Ventilation &amp; Climate Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horticultural Materials</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Last_12_Months_Prev_Year__c</fullName>
        <label>Total Revenue Last 12 Months Prev Year</label>
        <summarizedField>Sales_History__c.Revenue_Last12_Months_Previous_Year__c</summarizedField>
        <summaryForeignKey>Sales_History__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Last_12_Months__c</fullName>
        <inlineHelpText>Sum of Revenue Last 12 Months field on Sales History records.</inlineHelpText>
        <label>Total Revenue Last 12 Months</label>
        <summarizedField>Sales_History__c.Revenue_Last12_Months__c</summarizedField>
        <summaryForeignKey>Sales_History__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Last_Month_Prev_Year__c</fullName>
        <label>Total Revenue Last Month Prev Year</label>
        <summarizedField>Sales_History__c.Revenue_Last_Month_Previous_Year__c</summarizedField>
        <summaryForeignKey>Sales_History__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Last_Month__c</fullName>
        <label>Total Revenue Last Month</label>
        <summarizedField>Sales_History__c.Revenue_Last_Month__c</summarizedField>
        <summaryForeignKey>Sales_History__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transfer_From__c</fullName>
        <label>Transfer From</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Value_Added_Services_EDI_VMI__c</fullName>
        <label>Value Added Services (EDI / VMI)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eCommerce_capability__c</fullName>
        <label>eCommerce capability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>i__DaysSinceLastMail__c</fullName>
        <description>Number of days since the last email (inbound or outbound)</description>
        <formula>NOW() - i__LastMailSent__c</formula>
        <label>Days Since Last Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i__LastInboundMail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent email sent by this Account</description>
        <label>Last Inbound Email</label>
        <referenceTo>i__Email__c</referenceTo>
        <relationshipLabel>Accounts (Last Inbound Email)</relationshipLabel>
        <relationshipName>LastInboundEmailForAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>i__LastInboundSent__c</fullName>
        <description>Time of the most recent email sent by this Account</description>
        <label>Last Inbound Email Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>i__LastInboundTime__c</fullName>
        <description>obsolete - use LastInboundSent__c</description>
        <formula>i__LastInboundSent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>obsolete field</label>
        <type>DateTime</type>
    </fields>
</CustomObject>